--- a/forumengine/Dockerfile
+++ b/forumengine/Dockerfile
@@ -8,5 +8,11 @@ COPY requirements.txt ./
 RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
-# copy current dir's content to container's WORKDIR root i.e. all the contents of the web app
-COPY . .
+# copy entrypoint.sh
+COPY ./entrypoint.sh /usr/src/app/entrypoint.sh
+
+# copy project
+COPY . /usr/src/app/
+
+# run entrypoint.sh
+ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
